Fix button's border-style and don't let text wrap in a button

--- a/src/button/index.css
+++ b/src/button/index.css
@@ -10,6 +10,9 @@
   /* Remove button the margin in Firefox and Safari. */
   margin: 0;
 
+  border-style: solid;
+  white-space: nowrap;
+
   /* Remove the inheritance of text transform on button in Edge, Firefox, and IE. */
   text-transform: none;
   -webkit-font-smoothing: antialiased;
